--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ lint_js:
 
 deploy:
     stage: deploy
+    image: git.cec.valantic.com:5050/valantic-pimcore/docker-images/php:8.1-alpine
     only:
         - tags
     script:
