updated logic for generating docs

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -6,7 +6,7 @@ parameters:
 	        path: src/Contract/Service/DocBlockParserInterface.php
 
 	    -
-	        message: "#^Call to an undefined method Symfony\\\\Component\\\\Config\\\\Definition\\\\Builder\\\\NodeDefinition\\:\\:children\\(\\)\\.#"
+	        message: "#^Call to an undefined method Symfony\\\\Component\\\\Config\\\\Definition\\\\Builder\\\\NodeDefinition\\:\\:addDefaultsIfNotSet\\(\\)\\.#"
 	        count: 1
 	        path: src/DependencyInjection/Configuration.php
 
@@ -24,8 +24,3 @@ parameters:
 	        message: "#^Method Valantic\\\\PimcoreApiDocumentationBundle\\\\Service\\\\DocBlockParser\\:\\:determineTypeHint\\(\\) has parameter \\$reflectionClass with generic class ReflectionClass but does not specify its types\\: T#"
 	        count: 1
 	        path: src/Service/DocBlockParser.php
-
-	    -
-	        message: "#^Constant PIMCORE_PRIVATE_VAR not found#"
-	        count: 1
-	        path: src/Command/DocGeneratorCommand.php
