--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,9 +2,15 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-    bootstrapFiles:
-        - vendor/pimcore/pimcore/stubs/dynamic-constants.php
 
     level: 8
 
-    ignoreErrors:
+    bootstrapFiles:
+        - vendor/pimcore/pimcore/stubs/dynamic-constants.php
+
+    treatPhpDocTypesAsCertain: false
+
+    strictRules:
+        booleansInConditions: false
+        disallowedConstructs: false
+        noVariableVariables: false
