--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,9 @@ parameters:
 
     level: 8
 
+    paths:
+        - src
+
     bootstrapFiles:
         - vendor/pimcore/pimcore/stubs/dynamic-constants.php
 
