--- a/vendor-bin/phpcs/composer.json
+++ b/vendor-bin/phpcs/composer.json
@@ -1,5 +1,6 @@
 {
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.52.1"
-  }
+    "friendsofphp/php-cs-fixer": "^3.53.0"
+  },
+  "type": "project"
 }
