--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,21 +1,26 @@
 parameters:
 	ignoreErrors:
-	    -
-	        message: "#^Method Valantic\\\\PimcoreApiDocumentationBundle\\\\Contract\\\\Service\\\\DocBlockParserInterface\\:\\:determineTypeHint\\(\\) has parameter \\$reflectionClass with generic class ReflectionClass but does not specify its types\\: T$#"
-	        count: 1
-	        path: src/Contract/Service/DocBlockParserInterface.php
+		-
+			message: "#^Method Valantic\\\\PimcoreApiDocumentationBundle\\\\Contract\\\\Service\\\\DocBlockParserInterface\\:\\:determineTypeHint\\(\\) has parameter \\$reflectionClass with generic class ReflectionClass but does not specify its types\\: T$#"
+			count: 1
+			path: src/Contract/Service/DocBlockParserInterface.php
 
-	    -
-	        message: "#^Call to an undefined method Symfony\\\\Component\\\\Config\\\\Definition\\\\Builder\\\\NodeDefinition\\:\\:addDefaultsIfNotSet\\(\\)\\.#"
-	        count: 1
-	        path: src/DependencyInjection/Configuration.php
+		-
+			message: "#^Call to an undefined method Symfony\\\\Component\\\\Config\\\\Definition\\\\Builder\\\\NodeDefinition\\:\\:addDefaultsIfNotSet\\(\\)\\.$#"
+			count: 1
+			path: src/DependencyInjection/Configuration.php
 
-	    -
-	        message: "#^Access to an undefined property PHPStan\\\\PhpDocParser\\\\Ast\\\\PhpDoc\\\\PhpDocChildNode\\:\\:\\$value\\.#"
-	        count: 1
-	        path: src/Service/DocBlockParser.php
+		-
+			message: "#^Strict comparison using \\!\\=\\= between array\\{array\\<int, string\\>, array\\<int, non\\-empty\\-string\\>\\} and array\\{\\} will always evaluate to true\\.$#"
+			count: 1
+			path: src/Service/ControllerMethodParser.php
 
-	    -
-	        message: "#^Method Valantic\\\\PimcoreApiDocumentationBundle\\\\Service\\\\DocBlockParser\\:\\:determineTypeHint\\(\\) has parameter \\$reflectionClass with generic class ReflectionClass but does not specify its types\\: T#"
-	        count: 1
-	        path: src/Service/DocBlockParser.php
+		-
+			message: "#^Access to an undefined property PHPStan\\\\PhpDocParser\\\\Ast\\\\PhpDoc\\\\PhpDocChildNode\\:\\:\\$value\\.$#"
+			count: 1
+			path: src/Service/DocBlockParser.php
+
+		-
+			message: "#^Method Valantic\\\\PimcoreApiDocumentationBundle\\\\Service\\\\DocBlockParser\\:\\:determineTypeHint\\(\\) has parameter \\$reflectionClass with generic class ReflectionClass but does not specify its types\\: T$#"
+			count: 1
+			path: src/Service/DocBlockParser.php
