Pimcore 12 compatibility, tooling updates

--- a/src/Resources/config/pimcore/routing.yaml
+++ b/src/Resources/config/pimcore/routing.yaml
@@ -1,5 +1,5 @@
 valantic_pimcore_api_documentation:
     resource: "@ValanticPimcoreApiDocumentationBundle/Controller/"
-    type:     annotation
+    type:     attribute
     prefix:   /
 
