--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,19 @@
   "require": {
     "php": "^8.2",
     "ext-json": "*",
-    "pimcore/pimcore": "^11.0",
+    "pimcore/pimcore": "^11.0 || ^12.0",
     "nelmio/api-doc-bundle": "^4.12",
     "phpstan/phpdoc-parser": "^1.30"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
     "phpstan/extension-installer": "^1.4.3",
-    "phpstan/phpstan": "^1.12.25",
+    "phpstan/phpstan": "^1.12.32",
     "phpstan/phpstan-deprecation-rules": "^1.2.1",
     "phpstan/phpstan-strict-rules": "^1.6.2",
     "roave/security-advisories": "dev-latest",
-    "rector/rector": "^1.2.10"
+    "rector/rector": "^1.2.10",
+    "valantic/php-cs-fixer-config":"^2.2.1"
   },
   "scripts": {
     "post-install-cmd": [
@@ -61,7 +62,8 @@
   "config": {
     "allow-plugins": {
       "bamarni/composer-bin-plugin": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "php-http/discovery": true
     }
   },
   "extra": {
