--- a/.github/workflows/fix-php-code-style-issues-cs-fixer.yml
+++ b/.github/workflows/fix-php-code-style-issues-cs-fixer.yml
@@ -19,10 +19,14 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Run PHP CS Fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          args: --config=.php-cs-fixer.dist.php --allow-risky=yes
+          php-version: '8.3'
+          coverage: none
+
+      - name: Run PHP CS Fixer
+        run: composer run php-cs-fixer
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v7
