--- a/.github/workflows/fix-php-code-style-issues-cs-fixer.yml
+++ b/.github/workflows/fix-php-code-style-issues-cs-fixer.yml
@@ -25,6 +25,9 @@ jobs:
           php-version: '8.3'
           coverage: none
 
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v3
+
       - name: Run PHP CS Fixer
         run: composer run php-cs-fixer
 
